<?xml version="1.0"?>
<package format="2">
  <name>birdsview_map</name>
  <version>0.0.0</version>
  <description>The birdsview_map package</description>
  <maintainer email="user@todo.todo">elias</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
